--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "framer-motion": "^12.0.11",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
+    "react-countup": "^6.5.3",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-icons": "^5.3.0"
   },
